...
                    }
                    .accessibilityIdentifier("movies-item-\(index)")
                }
                .listRowBackground(Color.clear)
            }
            .listStyle(.plain)
            .accessibilityIdentifier("movie-list")
            loadingFooterView
        }
    }

    var sortAlert: some View {
        HStack(spacing: 20) {
...
